--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -49,7 +49,6 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
     }
     .menu-block {
-
         .menulink.current {
             text-decoration: underline;
         }
@@ -74,6 +73,9 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                     font-family: $unna;
                     font-size: 16px;
                     line-height: 18px;
+                }
+                a:hover {
+                    text-decoration: underline;
                 }
             }
         }
@@ -110,6 +112,9 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                             display: none;
                         }
                     }
+                }
+                span.obflink.menulink:hover {
+                    text-decoration: underline;
                 }
             }
         }
@@ -289,9 +294,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             background-image: url("../img/HACL.png");
             background-size: cover;
             width: 340px;
-
             @media (max-width: 1200px) {
-            display: none;
+                display: none;
             }
         }
     }
