--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -75,7 +75,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                     line-height: 18px;
                 }
                 a:hover {
-                    text-decoration: underline;
+                    text-decoration: underline !important;
                 }
             }
         }
