--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -12275,7 +12275,8 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 
 .block_newsletter form input[type=email] {
     padding: 11px;
-    width: 100%
+    width: 100%;
+    border: 1.5px solid;
 }
 
 .block_newsletter form input[type=email]:focus {
