--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -19,6 +19,7 @@
             text-transform: uppercase;
             font-size: 11px;
             cursor: pointer;
+            border: 1.5px solid;
         }
         #localise {
             height: 3rem;
@@ -33,6 +34,7 @@
             text-transform: uppercase;
             font-size: 11px;
             cursor: pointer;
+            border: 1.5px solid;
         }
         #stores-filter {
             margin-top: 120px;
