--- a/assets/scss/store.scss
+++ b/assets/scss/store.scss
@@ -21,6 +21,9 @@
             cursor: pointer;
             border: 1.5px solid;
         }
+        #group:focus {
+            border: 3px solid #464646;
+        }
         #localise {
             height: 3rem;
             padding: .7rem 1.25rem;
@@ -35,6 +38,9 @@
             font-size: 11px;
             cursor: pointer;
             border: 1.5px solid;
+        }
+        #localise:focus {
+            border: 3px solid #464646;
         }
         #stores-filter {
             margin-top: 120px;
