--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -218,6 +218,7 @@
                                     a {
                                         padding-left: 0;
                                         padding-right: 0;
+                                        padding-bottom: 20px;
                                     }
                                 }
                                 &:last-child {
