--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -15,6 +15,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
     display: flex;
     width: 100%;
     margin-left: 0;
+    margin-top: 10px;
     @media (max-width: 767px) {
         position: relative;
         background-color: $pink;
@@ -97,7 +98,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
         .recipe-ingredient {
             margin-top: 20px;
-            padding-top: 20px;
+            padding-top: 33px;
             border-top: 1px solid $black;
             @media (max-width: 767px) {
                 margin: 0;
@@ -152,7 +153,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         a {
                             font-style: normal;
                             font-family: $unna;
-                            font-size: 16px;
+                            font-size: 14px;
                             color: $black;
                             letter-spacing: 0.5px;
                             @media (max-width: 767px) {
