--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -270,6 +270,7 @@
                                             align-items: center;
                                             padding: 12px 0;
                                             height: 60px;
+                                            margin-bottom: 0;
                                             .input-group {
                                                 .bootstrap-touchspin {
                                                     width: 35%;
@@ -311,7 +312,7 @@
                                             flex-direction: row;
                                             justify-content: space-between;
                                             align-items: center;
-                                            margin-top: 20px;
+                                            margin: 20px 0;
                                             @media (max-width: 768px) {
                                                 flex-direction: column;
                                                 align-items: left;
