--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -349,6 +349,10 @@ textarea {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+    content: "\e919";
+}
+
 .icon-croix:before {
     content: "\e90e";
 }
@@ -7938,10 +7942,11 @@ textarea:active:-moz-placeholder {
     position: absolute;
     background: none;
     border: none;
-    bottom: .3125rem;
+    bottom: .8rem;
     right: .125rem;
-    color: #7a7a7a;
+    color: #232323;
     cursor: pointer;
+    font-size: 18px;
 }
 
 .search-widget form button[type=submit]:focus {
