--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -43,7 +43,8 @@
     @media (max-width: 767px) {
         position: absolute;
         top: 12px;
-        right: 55px;
+        right: 75px;
+        font-size: 18px;
     }
 }
 
@@ -281,7 +282,7 @@
                     #_mobile_logo {
                         a {
                             img {
-                                margin-top: 10px;
+                                margin-top: 12px;
                                 width: auto;
                                 height: auto;
                                 @media (max-width: 767px) {
