--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -373,6 +373,11 @@
                                     background: none;
                                     outline: 0;
                                 }
+
+                                .menu-next {
+                                    right: 5px;
+                                }
+                                
                                 button.menu-before {
                                     left: 0;
                                     top: -45px;
