--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -66,7 +66,8 @@
 }
 
 .info-all {
-    padding-left: 15px;
+    padding: 15px;
+    padding-right: 30px;
     .savoir-plus {
         >div {
             position: relative;
@@ -75,6 +76,9 @@
                 left: 120px;
                 bottom: -5px;
             }
+        }
+        .category-savoir-plus {
+            margin-top: 30px;
         }
     }
 }
