--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -294,9 +294,14 @@
                                             align-items: left;
                                         }
                                         .product-nutriscore {
+                                            display: flex;
+                                            .yuka {
+                                                margin-right: 40px;
+                                                margin-top: 14px;
+                                            }
                                             div {
                                                 img {
-                                                    width: 100px;
+                                                    max-height: 45px;
                                                 }
                                             }
                                         }
@@ -490,7 +495,6 @@
                                             }
                                         }
                                     }
-
                                     #en_savoir_plus,
                                     #preparation {
                                         @media (max-width: 768px) {
