--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -219,6 +219,7 @@
                                         padding-left: 0;
                                         padding-right: 0;
                                         padding-bottom: 20px;
+                                        text-decoration: none;
                                     }
                                 }
                                 &:last-child {
