--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -331,6 +331,7 @@
                         }
                         .info-all {
                             padding-left: 0;
+                            padding-right: 0;
                             margin-right: 0;
                             margin: 0 auto;
                             .info-detailed {
@@ -353,7 +354,7 @@
                                         margin-bottom: 0;
                                         height: 60px;
                                         
-                                        @media (max-width: 860px) {
+                                        @media (max-width: 480px) {
                                             width: 500px;
                                         }
 
@@ -399,19 +400,22 @@
                                     display: none;
                                     height: 205px;
                                     border-bottom: 1px solid $grey_border;
-                                    overflow: scroll;
-                                    overflow-x: hidden;
-                                    &::-webkit-scrollbar {
-                                        width: 10px;
-                                    }
-                                    &::-webkit-scrollbar-track {
-                                        background: $grey_border;
-                                    }
-                                    &::-webkit-scrollbar-thumb {
-                                        background: #888;
-                                    }
-                                    &::-webkit-scrollbar-thumb:hover {
-                                        background: #555;
+
+                                    @media (min-width: 768px) {
+                                        overflow: scroll;
+                                        overflow-x: hidden;
+                                        &::-webkit-scrollbar {
+                                            width: 10px;
+                                        }
+                                        &::-webkit-scrollbar-track {
+                                            background: $grey_border;
+                                        }
+                                        &::-webkit-scrollbar-thumb {
+                                            background: #888;
+                                        }
+                                        &::-webkit-scrollbar-thumb:hover {
+                                            background: #555;
+                                        }
                                     }
                                     @media (max-width: 768px) {
                                         height: 100%;
