--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -336,9 +336,11 @@
                         }
                         .info-all {
                             padding-left: 0;
+                            padding-bottom: 0;
                             padding-right: 0;
                             margin-right: 0;
                             margin: 0 auto;
+                            
                             .info-detailed {
                                 width: 100%;
                                 padding-left: 0;
