width différentes pages

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -27,6 +27,10 @@
                 //     }
                 //     margin-bottom: 30px;
                 // }
+                .col-md-6 {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
                 .product-cover {
                     img {
                         max-width: 400px;
