--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -306,4 +306,24 @@
         width: 1040px;
         max-width: 100%;
     }
+
+    .page-index #wrapper .container {
+        width: 943px;
+        max-width: 100%;
+    }
+
+    .page-product #wrapper .container {
+        width: 960px;
+        max-width: 100%;
+    }
+
+    .page-index #wrapper .home-page-block {
+        width: 1159px;
+        max-width: 100%;
+    }
+
+    .page-category #wrapper .container {
+        width: 1060px;
+        max-width: 100%;
+    }
 }
