--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -145,11 +145,20 @@
             max-height: 100%;
             margin-top: 80px;
             border: none;
+
+            @media (max-width: 480px) {
+                padding: 0;
+            }
+
             .row {
                 display: flex;
                 flex-wrap: nowrap;
                 border-bottom: 1px solid $grey_border;
                 position: relative;
+
+                @media (max-width: 480px) {
+                    padding: 5px 0;
+                }
                 .right-nav {
                     position: absolute;
                     right: 0;
