--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,6 +2,7 @@ $black: #000;
 $white: #fff;
 $hover: #232323;
 $grey: #ccc;
+$grey_footer: #d6d6d6;
 $grey_border: #d8d8d8;
 $greyblack: #232323;
 $greylight: #464646;
