--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -161,6 +161,10 @@
                     }
                 }
             }
+
+            .avis {
+                margin-bottom: 112px;
+            }
         }
         .block-category-inner {
             #category-description {
@@ -326,6 +330,7 @@
     .page-index #wrapper .home-page-block {
         width: 1159px;
         max-width: 100%;
+        
     }
 
     .page-category #wrapper .container {
