--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,6 +1,7 @@
 @import "global.scss";
 #footer {
     position: relative;
+    padding-top: 0;
     .footer-container {
         .container {
             margin: 0 auto;
@@ -182,6 +183,7 @@
         @media (max-width: 480px) {
             margin-top: 30px;
         }
+        padding: 0;
         .row {
             @media (min-width: 1200px) {
                 width: 1040px;
@@ -205,19 +207,19 @@
             }
         }
         p {
-            padding: 12px 25px 25px 25px;
+            padding: 12px 25px 0 25px;
+            margin-bottom: 74px;
             text-align: center;
             border-top: 1px solid black;
         }
         .block-title {
-            margin-top: 10px;
+            margin-top: 74px;
             font-style: unset;
             font-family: 'RobotoMono';
             font-size: 12px;
             text-transform: uppercase;
             letter-spacing: 1.3px;
             position: relative;
-            margin-top: 2rem;
             font-weight: normal;
             padding-bottom: 12px;
             text-align: center;
@@ -309,14 +311,17 @@
     }
     .row {
         .text-sm-center {
-            margin-top: 50px;
+            margin-top: 100px;
             text-align: center;
+            color: $grey_footer;
+
             @media (max-width: 992px) {
                 margin-top: 20px;
             }
             a {
                 display: inline-block;
                 padding-left: 1rem;
+                color: $grey_footer;
             }
             @media (max-width: 480px) {
                 a {
