--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -211,6 +211,10 @@
             margin-bottom: 74px;
             text-align: center;
             border-top: 1px solid black;
+
+            @media (max-width: 480px) {
+                margin-bottom: 45px;
+            }
         }
         .block-title {
             margin-top: 74px;
