--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -259,7 +259,8 @@
             padding-bottom: 20px;
 
             @media (max-width: 480px) {
-                padding: 5px 0 10px;
+                padding-bottom: 0;
+                padding: 10px 0 5px 0;
             }
             .row {
                 .navigation-header {
