--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -116,20 +116,18 @@
     }
 }
 
-#category {
+.page-category {
     #wrapper {
-        #products {
-            .container {
-                padding: unset;
+        .container {
+            padding: unset;
 
-                @media (max-width: 480px) {
-                    padding: 0;
+            @media (max-width: 480px) {
+                padding: 0;
 
-                }
-                .col-md-8,
-                .col-lg-9 {
-                    padding-right: unset;
-                }
+            }
+            .col-md-8,
+            .col-lg-9 {
+                padding-right: unset;
             }
         }
     }
