--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -39,6 +39,8 @@
                 text-align: center;
                 padding: 0 10px;
                 line-height: 40px;
+                font-size: 30px;
+                text-transform: uppercase;
             }
             .avantages {
                 @media (min-width: 768px) {
