change paiement form style

--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -153,12 +153,16 @@
         background: #fff;
         position: relative;
         margin: 0 20%;
+        @media (max-width: 768px) {
+            margin: 0;
+        }
         #paymentFrm {
             margin-left: 20%;
             margin-right: 20%;
             padding: 40px 0;
-            .panel-title {
-                margin-top: 40px;
+            @media (max-width: 768px) {
+                margin: 0;
+                padding: 30px;
             }
             .panel-body {
                 margin-top: 40px;
@@ -167,15 +171,15 @@
                         border: 1px solid black;
                         padding: 10px;
                     }
-                    #payBtn {
-                        margin-top: 20px;
-                        text-align: center;
-                        padding: .7rem 1.25rem;
-                        width: 100%;
-                        color: #fff;
-                        background-color: #000;
-                        border-color: transparent;
-                    }
+                }
+                #payBtn {
+                    margin-top: 20px;
+                    text-align: center;
+                    padding: .7rem 1.25rem;
+                    width: 100%;
+                    color: #fff;
+                    background-color: #000;
+                    border-color: transparent;
                 }
             }
         }
