--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -6,6 +6,7 @@ $grey_footer: #d6d6d6;
 $grey_border: #d8d8d8;
 $greyblack: #232323;
 $greylight: #464646;
+$greyselector: #626262;
 $blue: #82b8ec;
 $pink: #FEF9F4;
 
