--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -145,6 +145,7 @@
             max-height: 100%;
             margin-top: 80px;
             border: none;
+            margin-bottom: 0;
 
             @media (max-width: 480px) {
                 padding: 0;
@@ -260,7 +261,7 @@
 
             @media (max-width: 480px) {
                 padding-bottom: 0;
-                padding: 10px 0 5px 0;
+                padding: 10px 14px 5px 14px;
             }
             .row {
                 .navigation-header {
@@ -390,7 +391,14 @@
                                 }
 
                                 .menu-next {
-                                    right: 5px;
+                                    width: 100%;
+                                    height: 100%;
+
+                                    span {
+                                        position: absolute;
+                                        right: 30px;
+                                        top: 0px;
+                                    }
                                 }
 
                                 button.menu-before {
