--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,6 +3,7 @@
 /*products*/
 
 .container {
+    padding: 0;
     #main {
         #content {
             #carousel {
@@ -12,17 +13,7 @@
                         a {
                             figure {
                                 img {
-                                    @media (min-width: 1200px) {
-                                        max-width: 1160px;
-                                        max-height: 493.61px;
-                                    }
-                                    @media (max-width: 1200px) {
-                                        width: 100%;
-                                        height: auto;
-                                    }
-                                    @media (max-width: 480px) {
-                                        max-width: unset;
-                                    }
+                                    width: 100%;
                                 }
                             }
                         }
@@ -33,7 +24,7 @@
                 @media (max-width: 480px) {
                     margin-bottom: -50px;
                     padding: 0 15px;
-                    margin-top: 90px;
+                    margin-top: 50px;
                 }
                 margin-top: 100px;
                 h2 {
@@ -307,34 +298,31 @@
     }
 }
 
-@media (min-width: 1200px) {
-    #wrapper .container {
-        width: 1040px;
-        max-width: 100%;
-    }
 
-    .page-index #wrapper .container {
-        width: 943px;
-        max-width: 100%;
-        
-        @media (max-width: 480px) {
-            padding: 0;
-        }
-    }
 
-    .page-product #wrapper .container {
-        width: 960px;
-        max-width: 100%;
+.page-index #wrapper .container .home-page-block {
+    width: 943px;
+    max-width: 100%;
+    margin: 0 auto;
+    
+    @media (max-width: 480px) {
+        padding: 0;
     }
+}
 
-    .page-index #wrapper .home-page-block {
-        width: 1159px;
-        max-width: 100%;
-        
-    }
+.page-product #wrapper .container {
+    width: 960px;
+    max-width: 100%;
+}
 
-    .page-category #wrapper .container {
-        width: 1060px;
-        max-width: 100%;
-    }
+.page-index #wrapper .home-page-block {
+    width: 1159px;
+    max-width: 100%;
+    
+}
+
+.page-category #wrapper .container #products {
+    width: 1060px;
+    max-width: 100%;
+    margin:0 auto;
 }
