--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -26,7 +26,7 @@
                     padding: 0 15px;
                     margin-top: 50px;
                 }
-                margin-top: 100px;
+                margin-top: 90px;
                 h2 {
                     @include title;
                     margin-bottom: 50px;
@@ -303,8 +303,7 @@
 .page-index #wrapper .container .home-page-block {
     width: 943px;
     max-width: 100%;
-    margin: 0 auto;
-    margin-top: 90px;
+    margin: 50px auto;
     
     @media (max-width: 480px) {
         padding: 0;
