--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -12,8 +12,10 @@
                     li {
                         a {
                             figure {
+                                display: block;
                                 img {
-                                    width: 100%;
+                                    height: 850px;
+                                    width: 1920px;
                                 }
                             }
                         }
