--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -14,8 +14,26 @@
                             figure {
                                 display: block;
                                 img {
-                                    height: 850px;
-                                    width: 1920px;
+                                    @media (max-width: 480px) {
+                                        height: 850px;
+                                        width: 480px;
+                                        max-width: 100%;
+                                    }
+                                    @media (min-width: 480px) and (max-width: 769px) {
+                                        height: 850px;
+                                        width: 769px;
+                                        max-width: 100%;
+                                    }
+                                    @media (min-width: 769px) and (max-width: 1200px) {
+                                        height: 850px;
+                                        width: 1200px;
+                                        max-width: 100%;
+                                    }
+                                    @media (min-width: 1200px) and (max-width: 1920px) {
+                                        height: 850px;
+                                        width: 1920px;
+                                        max-width: 100%;
+                                    }
                                 }
                             }
                         }
