--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -15,23 +15,23 @@
                                 display: block;
                                 img {
                                     @media (max-width: 480px) {
-                                        height: 212.5px;
-                                        width: 480px;
+                                        max-height: 212.5px;
+                                        max-width: 480px;
                                         max-width: 100%;
                                     }
                                     @media (min-width: 481px) and (max-width: 768px) {
-                                        height: 340px;
-                                        width: 769px;
+                                        max-height: 340px;
+                                        max-width: 769px;
                                         max-width: 100%;
                                     }
                                     @media (min-width: 769px) and (max-width: 1200px) {
-                                        height: 531px;
-                                        width: 1200px;
+                                        max-height: 531px;
+                                        max-width: 1200px;
                                         max-width: 100%;
                                     }
                                     @media (min-width: 1201px) and (max-width: 1920px) {
-                                        height: 850px;
-                                        width: 1920px;
+                                        max-height: 850px;
+                                        max-width: 1920px;
                                         max-width: 100%;
                                     }
                                 }
@@ -310,12 +310,6 @@
 
 #wrapper .container {
     max-width: 100%;
-    @media (max-width: 1200px) {
-        width: 961px;
-    }
-    @media (max-width: 767px) {
-        width: unset;
-    }
 }
 
 
