filtres margin-bottom

--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -85,6 +85,7 @@
 @media screen and (min-width: 768px) {
     #search_filters {
         margin-top: 3.35rem;
+        margin-bottom: 20px;
     }
 }
 
