--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -31,6 +31,12 @@
                     padding-left: 0;
                     padding-right: 0;
                 }
+                .content {
+                    @media (max-width: 768px) {
+                        padding: 0 15px;
+                    }
+                }
+
                 .product-cover {
                     img {
                         max-width: 400px;
