--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -181,7 +181,8 @@
     }
     .block-social {
         .linkedin,
-        .twitter {
+        .twitter,
+        .pinterest {
             display: none;
         }
     }
