--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -346,3 +346,8 @@
     width: 1159px;
     margin: 0 auto;
 }
+
+#module-kj_abonnement-showAbonnement #wrapper .container {
+    width: 962px;
+    margin: 0 auto;
+}
