--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -45,10 +45,11 @@
             margin-bottom: 2em;
             h2 {
                 text-align: center;
-                padding: 0 10px;
+                padding: 0;
+                margin-bottom: 43px;
                 line-height: 27px;
                 font-size: 24px;
-                text-transform: uppercase;
+
             }
             .avantages {
                 @media (min-width: 768px) {
