--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -119,15 +119,19 @@
                     position: absolute;
                     top: 10px;
                     right: 10px;
+                    border-radius: 50%;
+                    background: #d3ede2;
+                    width: 70px;
+                    height: 70px;
+
                     span {
+                        font-family: $roboto;
+                        font-size: 14px;
+                        letter-spacing: 1.4px;
                         display: block;
                         background: #d3ede2;
-                        padding: 10px;
-                        border-radius: 50%;
+                        padding: 25px 5px;
                         text-align: center;
-                        width: 50px;
-                        height: 50px;
-                        margin: 0 auto;
                     }
                 }
                 .abonnement-image {
