abonnement taille image

--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -7,7 +7,9 @@
         margin-left: -30px;
         margin-bottom: -100px;
         img {
-            max-width: calc(100% + 60px);
+            max-width: 100%;
+            width: 922px;
+            height: 253.02px;
             position: relative;
             bottom: 100px;
         }
