image taille products

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -42,7 +42,8 @@
                         width: 400px;
                         height: 400px;
                         @media (max-width: 768px) {
-                            max-width: 100%;
+                            width: 470px;
+                            height: 470px;
                         }
                     }
                     #carousel {
