--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -752,6 +752,8 @@
                 width: 100%;
                 flex-direction: column;
                 align-items: center;
+                margin-bottom: 50px;
+                height: 500px;
             }
             .provenance {
                 // width: 694px;
